--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
 <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
 <script>
   var firebaseConfig = {
     apiKey: "AIzaSyBZB5yczUS4CuXimrLI8kcMrV8JSshTqsw",
