sign-in with google and refactoring

--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="google-signin-client_id" content="835829981827-ftfnnfuu372t8s1t3ee97nta1e48ka1l.apps.googleusercontent.com" />
   <title>INTMPC 2020</title>
 </head>
 <body>
