--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="google-signin-client_id" content="835829981827-ftfnnfuu372t8s1t3ee97nta1e48ka1l.apps.googleusercontent.com" />
+  <meta name="description" content="Official website for International Macro Photography Contest 2020" />
   <title>INTMPC 2020</title>
 </head>
 <body>
