--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,8 @@
 <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-storage.js"></script>
+
+
 <script>
   var firebaseConfig = {
     apiKey: "AIzaSyBZB5yczUS4CuXimrLI8kcMrV8JSshTqsw",
@@ -27,6 +29,35 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
   </script>
+
+<!-- Start of Async Drift Code -->
+<script>
+"use strict";
+
+!function() {
+  var t = window.driftt = window.drift = window.driftt || [];
+  if (!t.init) {
+    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
+    t.factory = function(e) {
+      return function() {
+        var n = Array.prototype.slice.call(arguments);
+        return n.unshift(e), t.push(n), t;
+      };
+    }, t.methods.forEach(function(e) {
+      t[e] = t.factory(e);
+    }), t.load = function(t) {
+      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+      var i = document.getElementsByTagName("script")[0];
+      i.parentNode.insertBefore(o, i);
+    };
+  }
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('63wpt7g8xn4e');
+</script>
+<!-- End of Async Drift Code -->
 
 <!--&lt;!&ndash; Insert these scripts at the bottom of the HTML, but before you use any Firebase services &ndash;&gt;-->
 
