--- a/web/index.html
+++ b/web/index.html
@@ -7,28 +7,7 @@
   <title>INTMPC 2020</title>
 </head>
 <body>
-<!--<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>-->
-<!--<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-auth.js"></script>-->
-<!--<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-analytics.js"></script>-->
-<!--<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>-->
-<!--<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-storage.js"></script>-->
-
-
-<!--<script>-->
-  <!--var firebaseConfig = {-->
-    <!--apiKey: "AIzaSyBZB5yczUS4CuXimrLI8kcMrV8JSshTqsw",-->
-    <!--authDomain: "intmpc2020.firebaseapp.com",-->
-    <!--databaseURL: "https://intmpc2020.firebaseio.com",-->
-    <!--projectId: "intmpc2020",-->
-    <!--storageBucket: "intmpc2020.appspot.com",-->
-    <!--messagingSenderId: "835829981827",-->
-    <!--appId: "1:835829981827:web:793b29ef0631e7ab6831b6",-->
-    <!--measurementId: "G-D5ELHK9NLM"-->
-  <!--};-->
-  <!--// Initialize Firebase-->
-  <!--firebase.initializeApp(firebaseConfig);-->
-  <!--firebase.analytics();-->
-  <!--</script>-->
+<!-- Paste code from script.txt here for testing locally-->
 
 <!-- Start of Async Drift Code -->
 <script>
