--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,30 @@
 <body>
 <!-- Paste code from script.txt here for testing locally-->
 
+<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-storage.js"></script>
+
+
+<script>
+var firebaseConfig = {
+apiKey: "AIzaSyBZB5yczUS4CuXimrLI8kcMrV8JSshTqsw",
+authDomain: "intmpc2020.firebaseapp.com",
+databaseURL: "https://intmpc2020.firebaseio.com",
+projectId: "intmpc2020",
+storageBucket: "intmpc2020.appspot.com",
+messagingSenderId: "835829981827",
+appId: "1:835829981827:web:793b29ef0631e7ab6831b6",
+measurementId: "G-D5ELHK9NLM"
+};
+// Initialize Firebase
+firebase.initializeApp(firebaseConfig);
+firebase.analytics();
+var storage = firebase.storage();
+</script>
+
 <!-- Start of Async Drift Code -->
 <script>
 "use strict";
@@ -39,18 +63,18 @@ drift.load('63wpt7g8xn4e');
 </script>
 <!-- End of Async Drift Code -->
 
-<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+<!--&lt;!&ndash; Insert these scripts at the bottom of the HTML, but before you use any Firebase services &ndash;&gt;-->
 
-<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-<script src="/__/firebase/7.5.0/firebase-app.js"></script>
+<!--&lt;!&ndash; Firebase App (the core Firebase SDK) is always required and must be listed first &ndash;&gt;-->
+<!--<script src="/__/firebase/7.5.0/firebase-app.js"></script>-->
 
-<!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-<script src="/__/firebase/7.5.0/firebase-analytics.js"></script>
+<!--&lt;!&ndash; If you enabled Analytics in your project, add the Firebase SDK for Analytics &ndash;&gt;-->
+<!--<script src="/__/firebase/7.5.0/firebase-analytics.js"></script>-->
 
-<!-- Add Firebase products that you want to use -->
-<script src="/__/firebase/7.5.0/firebase-auth.js"></script>
-<script src="/__/firebase/7.5.0/firebase-firestore.js"></script>
-<script src="/__/firebase/init.js"></script>
+<!--&lt;!&ndash; Add Firebase products that you want to use &ndash;&gt;-->
+<!--<script src="/__/firebase/7.5.0/firebase-auth.js"></script>-->
+<!--<script src="/__/firebase/7.5.0/firebase-firestore.js"></script>-->
+<!--<script src="/__/firebase/init.js"></script>-->
 
   <script defer src="main.dart.js" type="application/javascript"></script>
 </body>
